@@ -1,5 +1,10 @@
 2013-01-18  Anton Kolesov <akolesov@synopsys.com>
 
+	* arc-init.sh (save_res): use "tr" instead of "dos2unix" to replace
+	Windows' line endings with Linux' line endings.
+
+2013-01-18  Anton Kolesov <akolesov@synopsys.com>
+
 	* run-tests.sh. run-uclibc-tests.sh: Handle tests for big endian properly.
 
 2013-01-18  Anton Kolesov <akolesov@synopsys.com>
